# coding-agent-radar

./: .gitignore  CLAUDE.md  README.md  data.sqlite  pyproject.toml
.github/workflows/: deploy.yml  scan.yml
scanner/: __main__.py  db.py  detectors.py  export.py  github.py  main.py
scripts/: backfill_languages_timeline.py  backfill_stars_timeline.py  export_stats.py  serve.py  test_scan.py
website/: charts.js  evolution-language.html  evolution.html  index.html
website/public/: agents.json  languages.json  languages_timeline.json  scan_meta.json  stars.json  stars_timeline.json  timeline.json
